[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/dark_for_pico8.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://TranqDart.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -3.64951, 4.30097, 0, 0, 0, 0, 478.699, 2.79362, 0, 0, 0, 0, 480.207, 714.258, 0, 0, 0, 0, -0.634827, 720.287, 0, 0, 0, 0, -3.64951, 4.30097 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -3.64951, 4.30097 )
rotation = -0.00312509

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="TranqDart" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="shoot" from="Player" to="." method="fire"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit_orc" from="TranqDart" to="." method="orc_hit"]
